# zetcode-qt5

./: CMakeLists.txt  README.md
1-intro/: CMakeLists.txt
src/01-intro/: CMakeLists.txt
src/02-strings/: 01-basic.cpp  02-init.cpp  03-access.cpp  04-length.cpp  05-building.cpp  06-substrings.cpp  07-looping.cpp  08-comparing.cpp  09-converting.cpp  10-letters.cpp  11-modify.cpp  12-right_align.cpp  CMakeLists.txt  README.md  cprog.c
src/03-date-time/: 01-init.cpp  02-current_datetime.cpp  03-compare_dates.cpp  04-leapyear.cpp  05-predefined_date_formats.cpp  06-custom_date_formats.cpp  07-predefined_time_formats.cpp  08-custom_time_formats.cpp  09-weekday.cpp  10-nofdays.cpp  11-validity.cpp  12-daystofrom.cpp  13-datetime.cpp  14-julianday.cpp  15-battles.cpp  16-utc_local.cpp  17-unix_epoch.cpp  CMakeLists.txt
src/04-containers/: 01-myvector.cpp  02-mylist.cpp  03-mystringlist.cpp  04-myset.cpp  05-myqmap.cpp  06-sortcustomclass.cpp  CMakeLists.txt  book.h
src/05-files/: 01-file_size.cpp  02-read_file.cpp  03-write2file.cpp  04-copy_file.cpp  05-owner.cpp  06-file_times.cpp  07-dirs.cpp  08-special_paths.cpp  09-file_path.cpp  10-permissions.cpp  11-list_dir.cpp  CMakeLists.txt  colours
src/06-firstprograms/: 01-simple.cpp  02-tooltip.cpp  03-cursors.cpp  04-pushbutton.cpp  05-main-plusminus.cpp  CMakeLists.txt  plusminus.cpp  plusminus.h
src/07-menusandtoolbars/: 01-main-simplemenu.cpp  02-main-anothermenu.cpp  03-main-checkablemenu.cpp  04-main-toolbar.cpp  05-main-skeleton.cpp  CMakeLists.txt  anothermenu.cpp  anothermenu.h  checkable.cpp  checkable.h  simplemenu.cpp  simplemenu.h  skeleton.cpp  skeleton.h  toolbar.cpp  toolbar.h
src/08-layout/: 1-absolute.cpp  2-main-verticalbox.cpp  3-main-buttons.cpp  4-main-nesting.cpp  5-main-form.cpp  6-main-calculator.cpp  7-main-review.cpp  CMakeLists.txt  buttons.cpp  buttons.h  calculator.cpp  calculator.h  form.cpp  form.h  nesting.cpp  nesting.h  review.cpp  review.h  verticalbox.cpp  verticalbox.h
src/09-eventsandsignals/: 1-main-click.cpp  2-main-keypress.cpp  3-main-move.cpp  4-main-disconnect.cpp  5-main-timer.cpp  CMakeLists.txt  click.cpp  click.h  disconnect.cpp  disconnect.h  keypress.cpp  keypress.h  move.cpp  move.h  timer.cpp  timer.h
src/10-widgets/: 1-main-label.cpp  2-main-slider.cpp  3-main-combobox.cpp  4-main-spinbox.cpp  5-main-lineedit.cpp  6-main-statusbar.cpp  CMakeLists.txt  combobox.cpp  combobox.h  label.cpp  label.h  ledit.cpp  ledit.h  slider.cpp  slider.h  spinbox.cpp  spinbox.h  statusbar.cpp  statusbar.h
src/11-widgets2/: 1-main-checkbox.cpp  2-main-listwidget.cpp  3-main-progressbar.cpp  4-main-pixmap.cpp  5-main-splitter.cpp  6-main-table.cpp  CMakeLists.txt  checkbox.cpp  checkbox.h  listwidget.cpp  listwidget.h  pixmap.cpp  pixmap.h  progressbar.cpp  progressbar.h  splitter.cpp  splitter.h  table.cpp  table.h
src/12-painting/: 1-main-lines.cpp  2-main-colours.cpp  3-main-patterns.cpp  4-main-transparent_rectangles.cpp  5-main-donut.cpp  6-main-shapes.cpp  7-main-linear_gradients.cpp  8-main-radial_gradient.cpp  9-main-puff.cpp  CMakeLists.txt  colours.cpp  colours.h  donut.cpp  donut.h  linear_gradients.cpp  linear_gradients.h  lines.cpp  lines.h  patterns.cpp  patterns.h  puff.cpp  puff.h  radial_gradient.cpp  radial_gradient.h  shapes.cpp  shapes.h  transparent_rectangles.cpp  transparent_rectangles.h
src/13-customwidget/: CMakeLists.txt  application.cpp  application.h  main.cpp  widget.cpp  widget.h
src/14-snake/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
src/15-breakoutgame/: CMakeLists.txt  ball.cpp  ball.h  breakout.cpp  breakout.h  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h
