macro(add_exe name)
	set(prefix 02-strings)
	add_executable(${prefix}-${name} ${name}.cpp)
	target_link_libraries(${prefix}-${name} Qt5::Core)
endmacro()

add_exe(01-basic)
add_exe(02-init)
add_exe(03-access)
add_exe(04-length)
add_exe(05-building)
add_exe(06-substrings)
add_exe(07-looping)
add_exe(08-comparing)
add_exe(09-converting)
add_exe(10-letters)
add_exe(11-modify)
add_exe(12-right_align)
add_exe(13-html_escape)

file(COPY cprog.c DESTINATION ${CMAKE_CURRENT_BINARY_DIR})