macro(add_exe name)
	set(prefix 03-date-time)
	add_executable(${prefix}-${name} ${name}.cpp)
	target_link_libraries(${prefix}-${name} Qt5::Core)
endmacro()

add_exe(01-init)
add_exe(02-current_datetime)
add_exe(03-compare_dates)
add_exe(04-leapyear)
add_exe(05-predefined_date_formats)
add_exe(06-custom_date_formats)
add_exe(07-predefined_time_formats)
add_exe(08-custom_time_formats)
add_exe(09-weekday)
add_exe(10-nofdays)
add_exe(11-validity)
add_exe(12-daystofrom)
add_exe(13-datetime)
add_exe(14-julianday)
add_exe(15-battles)
add_exe(16-utc_local)
add_exe(17-unix_epoch)

